--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
         <meta charset="viewport" content="width=device-width">
         <title>dairy_farm_business</title>
         <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <div class="navigation_bar">
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#shades">Shades</a></li>
-                <li><a href="#contact">Contacts</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#location">Our location</a></li>
-              </ul>
-        </div>
+        <h1>SAFE-HANDS DAIRY FARM</h1>
         <!--home page-->
         <div class="home" id="home">
-            <h1>SAFE-HANDS DAIRY FARM</h1>
+            <div class="navigation_bar">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#shades">Shades</a></li>
+                    <li><a href="#contact">Contacts</a></li>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#location">Our location</a></li>
+                  </ul>
+            </div>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             
         </div>
@@ -56,13 +57,43 @@
         <!--contacts section-->
         <div class="contacts" id="contact">
             <h2>Our Contacts</h2>
+            <div class="column">
+                <label for="name">Name:</label>
+                  <input type="text" id="name" name="name" placeholder="enter your name">
+                  <label for="county">County</label>
+                  <select id="county" name="county">
+                    <option value="Siaya">Siaya</option>
+                    <option value="Busia">Busia</option>
+                    <option value="Kisumu">Kisumu</option>
+                  </select>
+                  <br><br>
+                  <label for="subject">Feedback:</label>
+                  <textarea id="feedback" name="feedback" placeholder="feedback" style="height:20px"></textarea>
+                  <input type="submit" value="Submit">
+            </div>
+
+            <div class="column">
+                <label for="fname">Get our daily news to your email:</label>
+                <input type="email" id="emailaddress" class="form-control" placeholder="enter your email">
+                <input type="button" value="Subscribe" id="subscribe" class="form-control">
+                </form>
+            </div>
 
         </div>
+        <br><br><br><br>
         <!--location section-->
         <div class="location" id="location">
             <h2>Our Location</h2>
             <img src="photos/googlemap.jpg">
         </div>
     </body>
-    <footer></footer>
+    <br>
+   <footer>
+    <a href="#" class="fa fa-facebook"></a>
+    <a href="#" class="fa fa-twitter"></a>
+    <a href="#" class="fa fa-google"></a>
+    <a href="#" class="fa fa-linkedin"></a>
+    <a href="#" class="fa fa-youtube"></a>
+    <a href="#" class="fa fa-instagram"></a>
+</footer>
 </html>
