linking creation of copyriht of the page html and javasript

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>dairy_farm_business</title>
         <link rel="stylesheet" type="text/css" href="index.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="index.js"></script>
     </head>
     <body>
         <h1>SAFE-HANDS DAIRY FARM</h1>
@@ -95,5 +96,7 @@
     <a href="#" class="fa fa-linkedin"></a>
     <a href="#" class="fa fa-youtube"></a>
     <a href="#" class="fa fa-instagram"></a>
+    <p> &copy;SAFE-HANDS_DAIRY_FARM &trade;
+    </p>
 </footer>
 </html>
