modification of index html content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>dairy_farm_business</title>
         <link rel="stylesheet" type="text/css" href="index.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="index.js"></script>
+        
     </head>
     <body>
         <h1>SAFE-HANDS DAIRY FARM</h1>
@@ -38,21 +38,28 @@
         <div class="shades" id="shades">
             <h2>Shades</h2>
             <div class="column">
-                <h3>Shade A</h3>
+                <h3>Shed A</h3>
+                <p>Daily production:510 litres</p>
 
             </div>
             <div class="column">
-                <h3>Shade B</h3>
+                <h3>Shed B</h3>
+                <p>Daily production:308 litres</p>
 
             </div>
             <div class="column">
-                <h3>Shade C</h3>
+                <h3>Shed C</h3>
+                <p>Daily production:486 litres</p>
 
             </div>
             <div class="column">
-                <h3>Shade D</h3>
+                <h3>Shed D</h3>
+                <p>Daily production:572 litres</p>
 
             </div>
+            <p>Total production per day: 1876 litres</p>
+            <p>Weekly income Ksh. 590940</p>
+            <p>Yearly income is Ksh. 30897720</p>
 
         </div>
         <!--contacts section-->
@@ -87,6 +94,7 @@
             <h2>Our Location</h2>
             <img src="photos/googlemap.jpg">
         </div>
+        <script src="index.js"></script>
     </body>
     <br>
    <footer>
