addition of contents in sheds section

--- a/index.html
+++ b/index.html
@@ -40,26 +40,72 @@
             <div class="column">
                 <h3>Shed A</h3>
                 <p>Daily production:510 litres</p>
+                <form oninput="x.value=parseInt(a.value)*parseInt(b.value)">
+                    <input type="hidden" id="a" value="45">
+                    <input type="number" id="b" value="">
+                    Ksh.<output name="x" for="a b"></output>
+                </form>
 
             </div>
             <div class="column">
                 <h3>Shed B</h3>
                 <p>Daily production:308 litres</p>
+                <form oninput="x.value=parseInt(a.value)*parseInt(b.value)">
+                    <input type="hidden" id="a" value="45">
+                    <input type="number" id="b" value="">
+                    Ksh.<output name="x" for="a b"></output>
+                </form>
 
             </div>
             <div class="column">
                 <h3>Shed C</h3>
                 <p>Daily production:486 litres</p>
-
+                <form oninput="x.value=parseInt(a.value)*parseInt(b.value)">
+                    <input type="hidden" id="a" value="45">
+                    <input type="number" id="b" value="">
+                    Ksh.<output name="x" for="a b"></output>
+                </form>
             </div>
+
             <div class="column">
                 <h3>Shed D</h3>
                 <p>Daily production:572 litres</p>
-
+                <form oninput="x.value=parseInt(a.value)*parseInt(b.value)">
+                    <input type="hidden" id="a" value="45">
+                    <input type="number" id="b" value="">
+                    Ksh.<output name="x" for="a b"></output>
+                </form>
             </div>
-            <p>Total production per day: 1876 litres</p>
-            <p>Weekly income Ksh. 590940</p>
-            <p>Yearly income is Ksh. 30897720</p>
+            <br><br><br><br><br><br><br><br><br>
+            <div class="income">
+                <h3>Daily income for all sheds</h3>
+                <p>Total production per day: 1876 litres</p>
+                <form oninput="x.value=parseInt(a.value)*parseInt(b.value)">
+                    <input type="hidden" id="a" value="45">
+                    <input type="number" id="b" value="">
+                    Income Ksh.<output name="x" for="a b"></output>
+                </form>
+            </div>
+
+            <div class="income">
+                <h3>Weekly income for all sheds</h3>
+                <p>Total production per week: 13132 litres</p>
+                <form oninput="x.value=parseInt(a.value)*parseInt(b.value)">
+                    <input type="hidden" id="a" value="45">
+                    <input type="number" id="b" value="">
+                    Income Ksh.<output name="x" for="a b"></output>
+                </form>
+            </div>
+            
+            <div class="income">
+                <h3>Yearly income for all sheds</h3>
+                <p>Total production per year: 686616 litres</p>
+                <form oninput="x.value=parseInt(a.value)*parseInt(b.value)">
+                    <input type="hidden" id="a" value="45">
+                    <input type="number" id="b" value="">
+                   Income Ksh.<output name="x" for="a b"></output>
+                </form>
+            </div>
 
         </div>
         <!--contacts section-->
